[package]
name = "numbers"
version = "0.1.0"
authors = ["unrahul <rahulunair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
reqwest = { features = ["blocking"], version = "0.11.0" }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
